--- a/ecom-app/package.json
+++ b/ecom-app/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.540.0",
+    "@aws-sdk/client-eventbridge": "^3.540.0",
+    "@aws-sdk/client-secrets-manager": "^3.543.0",
+    "@aws-sdk/client-ses": "^3.540.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
+    "@aws-sdk/util-dynamodb": "^3.540.0",
     "@middy/core": "^3.4.0",
-    "@middy/http-json-body-parser": "^3.4.0"
+    "@middy/http-json-body-parser": "^3.4.0",
+    "axios": "^1.6.8"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
